Ejercicion de Polimorfismo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /ModificadoresAccesos/target/
 /116ModificadoresAccesos/target/
 /119EjemploSobreEscritura/target/
+/Seccion 34. Polimorfismo en java/EjemploPolimorfismo/target/
