Ejemplo de Instaceof

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /Seccion 11. Paso por referencia/60PasoPorValor/target/
 /Seccion 11. Paso por valor y por referencia/60PasoPorValor/target/
 /Seccion 11. Paso por valor y por referencia/61PasoPorReferencia/target/
+/Seccion 26. Manejo de Javadocs/107ejemploJavaDoc/target/
+/Seccion 35. Palabra Instance Of/EjemploInstanceOf/target/
