--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /Seccion 11. Paso por valor y por referencia/61PasoPorReferencia/target/
 /Seccion 26. Manejo de Javadocs/107ejemploJavaDoc/target/
 /Seccion 35. Palabra Instance Of/EjemploInstanceOf/target/
+/Seccion 36. Conversion de objetos (casting)/EjemploConversionObjetos/target/
