Ejercicio sobre la clase Object

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /Seccion 26. Manejo de Javadocs/107ejemploJavaDoc/target/
 /Seccion 35. Palabra Instance Of/EjemploInstanceOf/target/
 /Seccion 36. Conversion de objetos (casting)/EjemploConversionObjetos/target/
+/Seccion 37. Clase Object/ejercicioClaseObject/target/
