Ejercicio sobre clases abstractas en java

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /Seccion 35. Palabra Instance Of/EjemploInstanceOf/target/
 /Seccion 36. Conversion de objetos (casting)/EjemploConversionObjetos/target/
 /Seccion 37. Clase Object/ejercicioClaseObject/target/
+/Seccion 38. Clases Abstractas/ClasesAbstractas/nbproject/private/
+/Seccion 38. Clases Abstractas/ClasesAbstractas/build/
