Ejercicio sobre Interfaces Java

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Seccion 37. Clase Object/ejercicioClaseObject/target/
 /Seccion 38. Clases Abstractas/ClasesAbstractas/nbproject/private/
 /Seccion 38. Clases Abstractas/ClasesAbstractas/build/
+/Seccion 39. Interfaces/ManejoInterfaces/target/
