Ejercicio de JavaBeans

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 /Seccion 38. Clases Abstractas/ClasesAbstractas/nbproject/private/
 /Seccion 38. Clases Abstractas/ClasesAbstractas/build/
 /Seccion 39. Interfaces/ManejoInterfaces/target/
+/40. Manejo de JavaBeans/JavaBean/nbproject/private/
+/40. Manejo de JavaBeans/JavaBeans/nbproject/private/
+/40. Manejo de JavaBeans/JavaBeans/build/
+/40. Manejo de JavaBeans/ManejoExcepciones1/nbproject/private/
+/Seccion 41. Manejo de Excepciones/ManejoExcepciones1/nbproject/private/
+/Seccion 40. Manejo de JavaBeans/JavaBeans/build/
+/Seccion 40. Manejo de JavaBeans/JavaBeans/nbproject/private/
