--- a/Seccion 49. Manejo Transacciones/LaboratorioTransacciones/pom.xml
+++ b/Seccion 49. Manejo Transacciones/LaboratorioTransacciones/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mx.com.gm.jdbc</groupId>
-    <artifactId>LaboratorioJDBC</artifactId>
+    <artifactId>LaboratorioTransacciones</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
     <properties>
@@ -17,5 +17,5 @@
             <version>8.0.19</version>
         </dependency>
     </dependencies>
-    <name>LaboratorioJDBC</name>
+    <name>LaboratorioTransacciones</name>
 </project>
