--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,46 @@
 /Seccion 41. Manejo de Excepciones/ManejoExcepciones1/nbproject/private/
 /Seccion 40. Manejo de JavaBeans/JavaBeans/build/
 /Seccion 40. Manejo de JavaBeans/JavaBeans/nbproject/private/
+/Seccion 41. Manejo de Excepciones/ManejoExcepciones1/build/
+/Seccion 41. Manejo de Excepciones/ManejoExcepciones2/nbproject/private/
+/Seccion 41. Manejo de Excepciones/ManejoExcepciones2/build/
+/Seccion 41. Manejo de Excepciones/ManejoExcepciones3/nbproject/private/
+/Seccion 41. Manejo de Excepciones/ManejoExcepciones3/build/
+/Seccion 42. API Collection/ManejoColecciones/target/
+/Seccion 43. Manejo de Generics/ClasesGenericas/target/
+/Seccion 43. Manejo de Generics/ApiColeccionesGenericas/target/
+/Seccion 45. Laboratorio/CatalogoPeliculas/nbproject/private/
+/Seccion 45. Laboratorio/CatalogoPeliculas/build/
+/Seccion 47. Introduccion a JDBC/IntroduccionJDBC/target/
+/Seccion 48. Manejo de JDBC/ManejoJDBC/target/
+/Seccion 48. Manejo de JDBC/LaboratorioJDBC/target/
+/Seccion 49. Manejo Transacciones/ManejoTransacciones/target/
+/Seccion 49. Manejo Transacciones/LaboratorioTransacciones/target/
+/Seccion 50. Patrones de Diseno/PatronesDiseno/target/
+/Seccion 50. Patrones de Diseno/LaboratorioPatronesDiseno/target/
+/Seccion 51. Pool de conexiones/PoolConexiones/target/
+/Seccion 52. Introduccion Servlets y JSP/HolaMundoJavaWeb/target/
+/Seccion 52. Introduccion Servlets y JSP/HolaMundoServlets/target/
+/Seccion 53. Manejo Parametros/ManejoParametros/target/
+/Seccion 54. Manejo Formularios HTML/ManejoFormulariosHTML/target/
+/Seccion 55. Manejo Cabeceros HTTP/ManejoCabeceros/target/
+/Seccion 56. Manejo Codigos de estado/ManejoCodigosEstado/target/
+/Seccion 57. Manejo Cabeceros de respuesta/CabecerosRespuesta/target/
+/Seccion 58. Manejo Cookies con API SERVLETS/ManejoCookies/target/
+/Seccion 58. Manejo Cookies con API SERVLETS/CookiesContador/target/
+/Seccion 59. Manejo Session/EjemploHttpSession/target/
+/Seccion 59. Manejo Session/EjemploHttpSession2/target/
+/Seccion 59. Manejo Session/EjemploCarritoCompras/target/
+/Seccion 60. HolaMundoJSP/HolaMundoJSP/target/
+/Seccion 61. Elementos de un JPS/ExpresionesJSPs/target/
+/Seccion 61. Elementos de un JPS/ScriptletsJSP/target/
+/Seccion 61. Elementos de un JPS/DocumentosJSPX/DocumentosJSP/target/
+/Seccion 62. Directivas/EjemploExcleJsp/target/
+/Seccion 63. Inclusion/EjemploInclusionEstatica/target/
+/Seccion 63. Inclusion/Dinamica/EjemploInclusionDinamica/target/
+/Seccion 64. Manejo Java Beans/ManejoJvaBeans/target/
+/Seccion 64. Manejo Java Beans/ManejoJavaBeans/target/
+/Seccion 66. JSTL/EjemploJSTL/target/
+/Seccion 65. Expression Language/EjemploExpressionLanguage/target/
+/Seccion 66. MVC/Ejemplo1MVC/target/
+/Seccion 67. Ejercicio/ControlClientes/target/
